@@ -9,7 +9,7 @@ if (PHP_MCRYPT != "no") {
 			CHECK_LIB('libmcrypt_a.lib;libmcrypt.lib', 'mcrypt') &&
 			CHECK_LIB('Advapi32.lib', 'mcrypt')
 			) {
-		EXTENSION('mcrypt', 'mcrypt.c', false);
+		EXTENSION('mcrypt', 'mcrypt.c mcrypt_filter.c', false);
 		AC_DEFINE('HAVE_LIBMCRYPT', 1);
 		AC_DEFINE('HAVE_LIBMCRYPT24', 1);
 	} else {
